--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.17.1",
     "express-handlebars": "^5.1.0",
     "express-session": "^1.17.1",
-    "passport": "^0.4.1"
+    "passport": "^0.4.1",
+    "sequelize": "^6.3.5"
   }
 }
