--- a/config/config.json
+++ b/config/config.json
@@ -1,22 +1,23 @@
 {
   "development": {
     "username": "root",
-    "password": "010tree010",
+    "password": "lemon",
     "database": "trivia",
     "host": "127.0.0.1",
     "port": 3306,
     "dialect": "mysql"
+    
   },
   "test": {
     "username": "root",
-    "password": "010tree010",
+    "password": "lemon",
     "database": "trivia",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
   "production": {
     "username": "root",
-    "password": "010tree010",
+    "password": "lemon",
     "database": "trivia",
     "host": "127.0.0.1",
     "dialect": "mysql"
