--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "username": "root",
-    "password": "lemon",
+    "password": "010tree010",
     "database": "trivia",
     "host": "127.0.0.1",
     "port": 3306,
@@ -10,14 +10,14 @@
   },
   "test": {
     "username": "root",
-    "password": "lemon",
+    "password": "010tree010",
     "database": "trivia",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
   "production": {
     "username": "root",
-    "password": "lemon",
+    "password": "010tree010",
     "database": "trivia",
     "host": "127.0.0.1",
     "dialect": "mysql"
