--- a/config/config.json
+++ b/config/config.json
@@ -16,10 +16,10 @@
     "dialect": "mysql"
   },
   "production": {
-    "username": "root",
-    "password": "010tree010",
-    "database": "trivia",
-    "host": "127.0.0.1",
+    "username": "miieba4qdagapqmk",
+    "password": "y56ckpbgyzi221t6",
+    "database": "yshhtu0allvdu18a",
+    "host": "sm9j2j5q6c8bpgyq.cbetxkdyhwsb.us-east-1.rds.amazonaws.com",
     "dialect": "mysql"
   }
 }
